--- a/DirectX11andFbxTest/DirectX11andFbxTest.vcxproj.filters
+++ b/DirectX11andFbxTest/DirectX11andFbxTest.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Utility\Collision">
       <UniqueIdentifier>{acacb1af-5ddf-4957-ac4e-56455c72f91b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{e205216b-e072-454c-8673-5077f03b0416}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\System\DirectGraphics.h">
@@ -99,6 +102,21 @@
     <ClInclude Include="Src\System\ShaderSrc\VertexShader.h">
       <Filter>System\ShaderSrc</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Scene\SceneController.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Scene\GameScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Scene\ResultScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Scene\TitleScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Scene\SceneBase.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Main.cpp" />
@@ -164,6 +182,21 @@
     </ClCompile>
     <ClCompile Include="Src\Utility\Collision\Collision.cpp">
       <Filter>Utility\Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Scene\SceneController.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Scene\GameScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Scene\ResultScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Scene\SceneBase.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Scene\TitleScene.cpp">
+      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
